--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,3 +64,34 @@ jobs:
         with:
           name: Published-${{ matrix.os }}-${{ matrix.architecture }}
           path: ./publish/
+
+  release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up GitHub CLI
+        uses: actions/setup-gh@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      # Create a GitHub release
+      - name: Create GitHub release
+        id: create_release
+        run: |
+          TAG_NAME="v1.0.${{ github.run_number }}"
+          gh release create $TAG_NAME ./publish/** --title "Release $TAG_NAME" --notes "Automated release for version $TAG_NAME"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Upload release assets
+      - name: Upload release assets
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./publish/
+          asset_name: Solution-${{ matrix.os }}-${{ matrix.architecture }}.zip
+          asset_content_type: application/zip
