--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,32 +66,30 @@ jobs:
           path: ./publish/
 
   release:
-    name: Create GitHub Release
-    runs-on: ubuntu-latest
+    name: Create Release
     needs: build
+    runs-on: ubuntu-latest
+
     steps:
+      # Checkout the code from the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up GitHub CLI
-        uses: actions/setup-gh@v2
+      # Download artifacts from the build job
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
         with:
+          path: ./artifacts
+
+      # Create GitHub Release and upload artifacts
+      - name: Create GitHub Release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: 'v${{ github.run_number }}'
+          name: 'Release v${{ github.run_number }}'
+          body: 'Automated release from GitHub Actions'
+          draft: false
+          prerelease: false
+          artifacts: './artifacts'
+          replacesArtifacts: true
           token: ${{ secrets.GITHUB_TOKEN }}
-
-      # Create a GitHub release
-      - name: Create GitHub release
-        id: create_release
-        run: |
-          TAG_NAME="v1.0.${{ github.run_number }}"
-          gh release create $TAG_NAME ./publish/** --title "Release $TAG_NAME" --notes "Automated release for version $TAG_NAME"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Upload release assets
-      - name: Upload release assets
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./publish/
-          asset_name: Solution-${{ matrix.os }}-${{ matrix.architecture }}.zip
-          asset_content_type: application/zip
